--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -67,7 +67,7 @@ formal publications, etc) linked to the same work.
 {% if release.extra != None %}
 <h3>Extra Metadata (raw JSON)</h3>
 {% for (key, value) in release.extra.items() %}
-<code><b>{{ key }}:</b> {% if key == "crossref" %} {{ value[:50] }}... {% else %} {{ value }} {% endif %}</code><br>
+<code><b>{{ key }}:</b> {% if key == "crossref" %} &lt;truncated, see full JSON&gt;{% else %} {{ value }} {% endif %}</code><br>
 {% endfor %}
 {% endif %}
 
