lock down editing links/routes for preview

--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -36,11 +36,11 @@
       <div class="ui simple dropdown item">
       demo-user <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item" href="/editgroup/current"><i class="edit icon"></i>Edits in Progress</a>
+          <a class="item" href="{# /editgroup/current #}#"><i class="edit icon"></i>Edits in Progress</a>
           <a class="item" href="/editor/aaaaaaaaaaaabkvkaaaaaaaaae/changelog"><i class="history icon"></i>History</a>
           <div class="divider"></div>
           <a class="item" href="/editor/aaaaaaaaaaaabkvkaaaaaaaaae"><i class="user icon"></i>Account</a>
-          <a class="item" href="/logout"><i class="sign out icon"></i>Logout</a>
+          <a class="item" href="{# /logout #}#"><i class="sign out icon"></i>Logout</a>
         </div>
       </div>
 
