--- a/python/fatcat/templates/container_view.html
+++ b/python/fatcat/templates/container_view.html
@@ -98,7 +98,7 @@ Raw Object:
 
 </div>
 <div class="two ui buttons bottom attached">
-  <a href="/container/{{ container.ident }}/edit" class="ui blue button">Edit Metadata</a>
+  <a href="/container/{{ container.ident }}/edit" class="ui blue button"><strike>Edit Metadata</strike></a>
   <a href="/container/{{ container.ident }}/history" class="ui button">View History</a>
 </div>
 
