--- a/python/fatcat/templates/creator_view.html
+++ b/python/fatcat/templates/creator_view.html
@@ -72,7 +72,7 @@ Raw Object:
 
 </div>
 <div class="two ui buttons bottom attached">
-  <a href="/creator/{{ creator.ident }}/edit" class="ui blue button">Edit Metadata</a>
+  <a href="/creator/{{ creator.ident }}/edit" class="ui blue button"><strike>Edit Metadata</strike></a>
   <a href="/creator/{{ creator.ident }}/history" class="ui button">View History</a>
 </div>
 
