--- a/python/fatcat/templates/file_view.html
+++ b/python/fatcat/templates/file_view.html
@@ -97,7 +97,7 @@ Raw Object:
 
 </div>
 <div class="two ui buttons bottom attached">
-  <a href="/file/{{ file.ident }}/edit" class="ui blue button">Edit Metadata</a>
+  <a href="/file/{{ file.ident }}/edit" class="ui blue button"><strike>Edit Metadata</strike></a>
   <a href="/file/{{ file.ident }}/history" class="ui button">View History</a>
 </div>
 
