--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -273,7 +273,7 @@ This release citing other releases.
 
 </div>
 <div class="two ui buttons bottom attached">
-  <a href="/release/{{ release.ident }}/edit" class="ui blue button">Edit Metadata</a>
+  <a href="/release/{{ release.ident }}/edit" class="ui blue button"><strike>Edit Metadata</strike></a>
   <a href="/release/{{ release.ident }}/history" class="ui button">View History</a>
 </div>
 
