--- a/python/fatcat/templates/work_view.html
+++ b/python/fatcat/templates/work_view.html
@@ -62,7 +62,7 @@ still reference the same underlying "work".
 
 </div>
 <div class="two ui buttons bottom attached">
-  <a href="/work/{{ work.ident }}/edit" class="ui blue button">Edit Metadata</a>
+  <a href="/work/{{ work.ident }}/edit" class="ui blue button"><strike>Edit Metadata</strike></a>
   <a href="/work/{{ work.ident }}/history" class="ui button">View History</a>
 </div>
 
