set HTTPS referrer policy in HTML <meta>
The intent of this change is for user agents to set the Referrer HTTP
field when following outlinks from fatcat.wiki, but only with the source
domain, not the full URL.

--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
 
   <title>{% block title %}fatcat!{% endblock %}</title>
+  <meta name="referrer" content="origin-when-cross-origin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.css">
   <script
