webface: add input form labels

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -30,7 +30,7 @@
         <form class="" role="search" action="/release/search" method="get">
           <div class="ui transparent inverted icon input">
             <i class="search icon"></i>
-            <input type="text" placeholder="Search..." name="q">
+            <input type="text" placeholder="Search..." name="q" aria-label="generic entity search">
           </div>
         </form>
       </div>
