--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -42,7 +42,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><form class="" role="lookup" action="/release/lookup" method="get">
           <div class="ui icon input">
             <i class="search icon"></i>
-            <input type="text" placeholder="DOI" name="doi">
+            <input type="text" placeholder="DOI" name="doi" aria-label="search by DOI">
           </div>
         </form>
 <tr><td><b>Container</b>
@@ -53,7 +53,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><form class="" role="lookup" action="/container/lookup" method="get">
           <div class="ui icon input">
             <i class="search icon"></i>
-            <input type="text" placeholder="ISSN-L" name="issnl">
+            <input type="text" placeholder="ISSN-L" name="issnl" aria-label="search by ISSN-L">
           </div>
         </form>
 
@@ -65,7 +65,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><form class="" role="lookup" action="/creator/lookup" method="get">
           <div class="ui icon input">
             <i class="search icon"></i>
-            <input type="text" placeholder="ORCID" name="orcid">
+            <input type="text" placeholder="ORCID" name="orcid" aria-label="search by ORCID">
           </div>
         </form>
 <tr><td><b>File</b>
@@ -76,7 +76,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><form class="" role="lookup" action="/file/lookup" method="get">
           <div class="ui icon input">
             <i class="search icon"></i>
-            <input type="text" placeholder="SHA-1" name="sha1">
+            <input type="text" placeholder="SHA-1" name="sha1" aria-label="search by SHA1">
           </div>
         </form>
 <tr><td><b>Work</b>
