--- a/python/fatcat_web/templates/editor_changelog.html
+++ b/python/fatcat_web/templates/editor_changelog.html
@@ -3,8 +3,8 @@
 
 <h1 class="ui header">Editor Changelog: {{ editor.username }}
 <div class="sub header">
-  <a href="/editor/{{editor.id}}">
-    <code>editor {{ editor.id }}</code>
+  <a href="/editor/{{editor.editor_id}}">
+    <code>editor {{ editor.editor_id }}</code>
   </a>
 </div>
 </h1>
