--- a/python/fatcat_web/templates/editor_view.html
+++ b/python/fatcat_web/templates/editor_view.html
@@ -3,10 +3,10 @@
 
 <h1 class="ui header">{{ editor.username }}
 <div class="sub header">
-  <code>editor {{ editor.id }}</code>
+  <code>editor {{ editor.editor_id }}</code>
 </div>
 </h1>
 
-<p><b><a href="/editor/{{ editor.id }}/changelog">View editor's changelog</a></b>
+<p><b><a href="/editor/{{ editor.editor_id }}/changelog">View editor's changelog</a></b>
 
 {% endblock %}
