basic OIDC auth working

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -33,7 +33,7 @@
       <div class="ui simple dropdown item">
       {{ current_user.username }} <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item" href="/editgroup/current"><i class="edit icon"></i>Edits in Progress</a>
+          <a class="item" href="#"><i class="edit icon"></i>Edits in Progress</a>
           <a class="item" href="/editor/{{ current_user.editor_id }}/changelog"><i class="history icon"></i>History</a>
           <div class="divider"></div>
           <a class="item" href="/auth/account"><i class="user icon"></i>Account</a>
