basic/crude IA login

--- a/python/fatcat_web/templates/auth_login.html
+++ b/python/fatcat_web/templates/auth_login.html
@@ -12,6 +12,7 @@
 <p>Other options...
 <ul>
   <li><a href="/auth/token_login">Using auth token</a> (admin/operator)
+  <li><a href="/auth/ia/login">With Internet Archive account</a> (experimental)
 </ul>
 
 {% endblock %}
