--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -55,7 +55,7 @@
   {% if messages %}
     <div class="ui message">
     {# Needs more javascript: <i class="close icon"></i> #}
-    <div class="header">Now Hear This!</div>
+    <div class="header">Now Hear This...</div>
     <ul class="list">
     {% for message in messages %}
       <li>{{ message }}
